--- a/ERPClient/src/index.html
+++ b/ERPClient/src/index.html
@@ -21,6 +21,10 @@
 
     <script src="assets/plugins/jquery/jquery.min.js"></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/e57227021a.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/dist/js/adminlte.min.js"></script>
   </body>
 </html>
